--- a/packages/webapp/src/App.css
+++ b/packages/webapp/src/App.css
@@ -7,6 +7,12 @@
   pointer-events: none;
 }
 
+/* 
+  font
+  Ref: https://fonts.google.com/
+  */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&family=Noto+Sans+KR:wght@300;400;700&family=Noto+Sans+TC:wght@300;400;700&display=swap');
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
